docs: Documentation edit for contact info and policies.
